try-catch for update checker, added update checker to language